fix(ci): add dict extra to lint job for basedpyright
basedpyright needs jamdict installed to resolve imports in jmdict.py

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         run: uv python install 3.13
 
       - name: Install dependencies
-        run: uv sync --extra dev
+        run: uv sync --extra dev --extra dict
 
       - name: Ruff check
         run: uv run ruff check src/
