docs: Androidアプリ化に向けたドキュメント整備 (Issue #14)
- AGENTS.md: Android技術スタック、ディレクトリ構造、開発ルール追加
  - mainブランチへの直接push禁止
  - 日本語でのやり取り義務
  - イテレーション毎のドキュメント更新義務
- prompt.md: Android移植仕様、AnagramEntryスキーマ、アーキテクチャ設計追加
- README.md: Androidアプリ版セクション追加、JMdictライセンスをCC BY-SA 4.0に更新
- CHANGELOG.md: 変更履歴ファイル新規作成
- tasks.md: 開発進捗管理ファイル新規作成
- .gitignore: Android/Kotlin/Gradle関連の除外パターン追加

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,16 @@ htmlcov/
 # OS
 .DS_Store
 Thumbs.db
+
+# Android / Kotlin / Gradle
+android/.gradle/
+android/build/
+android/app/build/
+android/local.properties
+android/.idea/
+android/captures/
+android/*.iml
+android/app/*.iml
+*.apk
+*.aab
+*.hprof
