AndroidにHilt DI基盤を導入

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
+        android:name=".AnagramApplication"
         android:allowBackup="true"
         android:label="Anagram Analyzer"
         android:supportsRtl="true"
